--- a/package.json
+++ b/package.json
@@ -4,21 +4,34 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build",  
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.15.20",
+    "@reduxjs/toolkit": "^2.2.5",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.7.0",
+    "@tanstack/react-table": "^8.16.0",
+    "dayjs": "^1.11.11",
+    "js-cookie": "^3.0.5",
+    "rsuite": "^5.60.1",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "typescript": "^5"
   }
 }
